[tool.poetry]
name = "onesocial-reddit-oauth"
version = "0.1.0"
description = ""
authors = ["Lê Đức Toàn <lddtoan@outlook.com>"]
readme = "README.md"
packages = [{include = "onesocial_reddit_oauth"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.0"
pytest = "^7.3.1"
itsdangerous = "^2.1.2"
pre-commit = "^3.3.1"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
